fix class names to align with components

--- a/src/styles/createprojectwizard/_new-project-title-form.scss
+++ b/src/styles/createprojectwizard/_new-project-title-form.scss
@@ -1,5 +1,4 @@
-$block-class:'new-project-title';
-$bad-color: #af1212;
+$block-class: 'new-project-title-form';
 
 @at-root {
     .#{$block-class} {
@@ -7,18 +6,9 @@ $bad-color: #af1212;
         flex-direction: column;
         padding: 3em 2em;
 
-        &__layer {
-            width: 800px;
-        }
-
         &__summary-container {
             padding-bottom: 0.5em;
             margin-top: 8px;
-        }
-
-        &__error {
-            width: 50%;
-            color: $bad-color;
         }
 
         &__summary {
